syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/the-medo/talebound-backend/pb";

message ChatMessage {
  int64 id = 1;
  int32 userId = 2;
  string username = 3;
  string text = 4;
  google.protobuf.Timestamp createdAt = 5;
}

